--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,24 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
 body {
     background-color: aliceblue;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-top: 2rem;
-    margin-bottom: 40rem;
-    margin-right: 1rem;
-    margin-left:1rem;
+    
+
+}
+header>img {
+    display: block;
+    height: 4rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h2 {
-  font-size: 2em;  
+  font-size: 3rem;  
 }
 
 h3 {
@@ -18,25 +28,50 @@ h3 {
 p {
     font-size: 0.5rem;
 }
-a {
-    font-size: 0.5rem;
+
+.box {
+   margin:0;
+   padding:0;
+   box-sizing: border-box; 
+   margin-bottom:1rem;
+
+}
+.box .bgImage {
+    background-image: url("https://wallpapercave.com/wp/wp3376127.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;   
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    position: relative;
+
+}
+.box .bgImage::after {
+    content:"";
+    position: absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background-color: rgba(0,0,0,0.60);
+    border-radius: 0.5rem;
+}
+.box .content {
+    position: relative;
+    top:-100%;
+    left:0%;
+    transform: translate (0%, 0%);
+    text-align: left;
+    color: white;
+    padding: 1rem;
 }
 
-header>img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 4rem;
+.content p {
+    line-height: auto;
+    font-size: medium;
 }
 
-nav ul{
-    list-style: none;
-    text-align: center;
-}
-
-nav li {
-    display: inline-block;
-}
 
 section {
     display: flex;
@@ -45,9 +80,38 @@ section {
 
 article {
     flex: 1;
-    
 }
 
+.card {
+    background-color: rgb(59, 71, 53);
+    border-radius: 0.5rem;
+    padding:1%;
+    margin:1%;
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    box-shadow: 0rem 0.2rem 1rem rgb(150, 149, 149);
+    
+}
+.card img {
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;
+    height: 45%;
+    border-radius: 0.5rem;
+}
+.card p{
+    font-weight: 100;
+    line-height: 1rem;
+    text-indent: 1rem;
+    text-align: justify;
+    color: white;
+}
+
+.card h3 {
+    color: white;
+}
 footer {
     display:flex;
     justify-content: center;
